--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,7 +1,7 @@
 version: 0.2
 
 phases:
-  pre-build:
+  pre_build:
     commands:
       - echo log in to aws ecr 
       - aws --version
@@ -16,7 +16,7 @@ phases:
       - docker build -t $REPOSITORY_URI:$IMAGE_TAG .
       - docker tag $REPOSITORY_URI:$IMAGE_TAG $REPOSITORY_URI:$IMAGE_TAG
 
-  post-build:
+  post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
